_sass/_post.scss
.post{

  // text
  p {
    @extend %word-wrap;
    margin-top: 0;
    margin-bottom: 1em;
  }

  strong {
    color: #303030;
    font-weight: 600;
  }

  em {
    font-style: italic;
  }


  // lists
  ul, ol, dl {
    margin-top: 0;
    margin-bottom: 1rem;
  }

  li {
    margin-left: 3em;
    margin-bottom: 9px;
  }

  ul > li{
    list-style-type: disc;
  }

  ol > li{
    list-style-type: decimal;
  }

  dt {
    font-weight: bold;
  }

  dd {
    margin-bottom: .5rem;
  }

  // links
  a:not(.anchorjs-link) {
    /*@extend %keyword;*/
    color: inherit;
    @extend %highlighter;
    padding: 0 3px;
    text-decoration: none;
  }

  a:hover {
    text-decoration: underline;
  }

  .content__anchor{
    background-color: transparent !important;
    text-decoration: none !important;
    color: #e2e2e2 !important;
  }

  .content__anchor:hover{
    color: #c3c3c3 !important;
    cursor: pointer;
  }

  // links at the end of article
  .links-list{
    @include below-lg{
      a {
        display: block;
        @extend %ellipsis;
      }
    }
  }


  // image
  img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
    border-radius: 5px;
  }

  // table
  & > table {
    // we have to nest since code uses tables too
    margin-bottom: 1rem;
    width: 100%;
    border: 1px solid #e5e5e5;
    border-collapse: collapse;

    td,
    th {
      padding: .25rem .5rem;
      border: 1px solid #e5e5e5;
    }
    tbody tr:nth-child(odd) td,
    tbody tr:nth-child(odd) th {
      background-color: #f9f9f9;
    }
  }

  // code
  div.highlight{ // block
    margin-top: 0;
    margin-bottom: 1em;
  }
}

